<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_week"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="30dp"
    app:cardElevation="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#487BA3"
            android:orientation="horizontal"
            android:padding="25dp">

            <LinearLayout
                android:id="@+id/overviewContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txtDia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    tools:text="Day" />

                <TextView
                    android:id="@+id/txtHour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="00:00am"
                    android:textColor="#EFEFEF" />

                <TextView
                    android:id="@+id/txtTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/temperatura"
                    android:textColor="@color/white"
                    android:textSize="40sp">

                </TextView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtMin_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min_temp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txtMax_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/max_temp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/imageStatus"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:src="@drawable/sun"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtStatus"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:id="@+id/txtStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="36dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:text="@string/clear_sky"
                        android:textAllCaps="false"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp"
                        android:textStyle="bold|italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/imageStatus"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>